force-app/main/default/objects/VAT_INVOICE__c/VAT_INVOICE__c.object-meta.xml
<CustomObject>
    <label>VAT/INV</label>
    <nameField>
        <displayFormat>VI-{000000}</displayFormat>
        <label>VAT INVOICE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>