force-app/main/default/objects/VAT_INVOICE__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>CASE(RecordType.DeveloperName
, &apos;IBInvoiceNote&apos;,     VatIssueFrom__r.AccountNumber 

, &apos;VendorVATInvoice&apos;,  VatIssueFrom__r.AccountNumber

, &apos;OBInvoiceNote&apos;,     VAT_INVOICE_TO__r.AccountNumber

, &apos;MULTIPLE_SHIPMENT_TO_1VAT_INVOICE_SUMMARY&apos;, VAT_INVOICE_TO__r.AccountNumber 

, &apos;FMSTMSWMSVATInvoice&apos;, VAT_INVOICE_TO__r.AccountNumber 

, &apos;CloWMSVATInvoice&apos;, VAT_INVOICE_TO__r.AccountNumber 
, &apos;&apos;)</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>