force-app/main/default/objects/VAT_INVOICE__c/fields/AmountOfTaxVATBuying__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxVATBuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AMOUNT OF TAX-VAT BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>