force-app/main/default/objects/VAT_INVOICE__c/fields/AmountOfTaxVATSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxVATSellingFCY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount of Tax-Selling(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>