force-app/main/default/objects/VAT_INVOICE__c/fields/AmountVATBuyingIncludeVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountVATBuyingIncludeVAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AMOUNT VAT BUYING INCLUDE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>