force-app/main/default/objects/VAT_INVOICE__c/fields/AmountVATSellingIncludeVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountVATSellingIncludeVAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AMOUNT VAT SELLING INCLUDE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>