force-app/main/default/objects/VAT_INVOICE__c/fields/AmountVATSellingIncludeVATFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountVATSellingIncludeVATFCY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Selling incl Tax(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>