force-app/main/default/objects/VAT_INVOICE__c/fields/AmountVATSellingInclVATText__c.field-meta.xml
<CustomField>
    <fullName>AmountVATSellingInclVATText__c</fullName>
    <label>Amount Selling incl Tax-Text</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>