force-app/main/default/objects/VAT_INVOICE__c/fields/APPROVED_AND_LOCK__c.field-meta.xml
<CustomField>
    <fullName>APPROVED_AND_LOCK__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once the Approval request approved by Approver, the check box will be checked.</inlineHelpText>
    <label>APPROVED AND LOCK</label>
    <type>Checkbox</type>
</CustomField>