force-app/main/default/objects/VAT_INVOICE__c/fields/AutoConnectSourceToTrx__c.field-meta.xml
<CustomField>
    <fullName>AutoConnectSourceToTrx__c</fullName>
    <label>AUTO-CONNECT SOURCES TO TRX PLAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RecordCreationStatus</valueSetName>
    </valueSet>
</CustomField>