force-app/main/default/objects/VAT_INVOICE__c/fields/BankID__c.field-meta.xml
<CustomField>
    <fullName>BankID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ID</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipName>VATInvBank</relationshipName>
    <type>Lookup</type>
</CustomField>