force-app/main/default/objects/VAT_INVOICE__c/fields/BuyingTaxRatio__c.field-meta.xml
<CustomField>
    <fullName>BuyingTaxRatio__c</fullName>
    <label>Buying Tax Ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>