force-app/main/default/objects/VAT_INVOICE__c/fields/CashID__c.field-meta.xml
<CustomField>
    <fullName>CashID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH ID</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipName>VATInvCash</relationshipName>
    <type>Lookup</type>
</CustomField>