force-app/main/default/objects/VAT_INVOICE__c/fields/CLIENTS_NAME_IN_VAT_INVOICE__c.field-meta.xml
<CustomField>
    <fullName>CLIENTS_NAME_IN_VAT_INVOICE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input the name of recipient in Client&apos;s company who receive the VAT Invoice.</inlineHelpText>
    <label>CLIENT&apos;S NAME IN VAT INVOICE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.VAT_INVOICE_TO__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CLIENTS_NAME_IN_VAT_INVOICE</relationshipName>
    <type>Lookup</type>
</CustomField>