force-app/main/default/objects/VAT_INVOICE__c/fields/CREDIT_TERM__c.field-meta.xml
<CustomField>
    <fullName>CREDIT_TERM__c</fullName>
    <label>CREDIT TERM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASH ON DELIVERY</fullName>
            </value>
            <value>
                <fullName>MONTHLY CREDIT PAYMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>