force-app/main/default/objects/VAT_INVOICE__c/fields/CurrencyConversionforSelling__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionforSelling__c</fullName>
    <label>Currency Conversion for Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>