force-app/main/default/objects/VAT_INVOICE__c/fields/CUSTOMER_BANK_ACCOUNT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_BANK_ACCOUNT_NUMBER__c</fullName>
    <formula>VAT_INVOICE_TO__r.Bank1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMER BANK ACCOUNT NUMBER</label>
    <type>Text</type>
</CustomField>