force-app/main/default/objects/VAT_INVOICE__c/fields/CUSTOMER_PHONE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_PHONE_NUMBER__c</fullName>
    <formula>VAT_INVOICE_TO__r.Phone</formula>
    <label>CUSTOMER PHONE NUMBER</label>
    <type>Text</type>
</CustomField>