force-app/main/default/objects/VAT_INVOICE__c/fields/DESCRIPTION_FOR_COMBINE__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION_FOR_COMBINE__c</fullName>
    <defaultValue>&quot;Forwarding service fee&quot;</defaultValue>
    <inlineHelpText>Input the service description displayed on invoice when multiple Forwarding is combined and shown as one service description.</inlineHelpText>
    <label>DESCRIPTION FOR COMBINE</label>
    <type>TextArea</type>
</CustomField>