force-app/main/default/objects/VAT_INVOICE__c/fields/ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate ID</label>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipLabel>VAT/INV</relationshipLabel>
    <relationshipName>VATInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>