force-app/main/default/objects/VAT_INVOICE__c/fields/Extra__c.field-meta.xml
<CustomField>
    <fullName>Extra__c</fullName>
    <label>Extra</label>
    <type>TextArea</type>
</CustomField>