force-app/main/default/objects/VAT_INVOICE__c/fields/FORWARDING_IDs__c.field-meta.xml
<CustomField>
    <fullName>FORWARDING_IDs__c</fullName>
    <label>FORWARDING IDs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>