force-app/main/default/objects/VAT_INVOICE__c/fields/IMPORTER_EXPORTER_CODE__c.field-meta.xml
<CustomField>
    <fullName>IMPORTER_EXPORTER_CODE__c</fullName>
    <formula>VAT_INVOICE_TO__r.ImporterNumber__c</formula>
    <label>IMPORTER/EXPORTER CODE</label>
    <type>Text</type>
</CustomField>