force-app/main/default/objects/VAT_INVOICE__c/fields/IssuedYear__c.field-meta.xml
<CustomField>
    <fullName>IssuedYear__c</fullName>
    <label>Issued Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>