force-app/main/default/objects/VAT_INVOICE__c/fields/LoanID__c.field-meta.xml
<CustomField>
    <fullName>LoanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOAN ID</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipName>VATInvLoan</relationshipName>
    <type>Lookup</type>
</CustomField>