force-app/main/default/objects/VAT_INVOICE__c/fields/LOCAL_BANK_ACCOUNT_NUMBER_1__c.field-meta.xml
<CustomField>
    <fullName>LOCAL_BANK_ACCOUNT_NUMBER_1__c</fullName>
    <defaultValue>$Setup.Site_Custom_Settings__c.Local_Account_No_1__c &amp; &quot; &quot;&amp; $Setup.Site_Custom_Settings__c.Local_Bank_Name_1__c</defaultValue>
    <label>LOCAL BANK ACCOUNT NUMBER 1</label>
    <type>TextArea</type>
</CustomField>