force-app/main/default/objects/VAT_INVOICE__c/fields/LOCAL_BANK_NAME_1__c.field-meta.xml
<CustomField>
    <fullName>LOCAL_BANK_NAME_1__c</fullName>
    <defaultValue>$Setup.Site_Custom_Settings__c.Local_Bank_Name_1__c</defaultValue>
    <label>LOCAL BANK NAME 1</label>
    <type>TextArea</type>
</CustomField>