force-app/main/default/objects/VAT_INVOICE__c/fields/LOCAL_BANK_NAME_2__c.field-meta.xml
<CustomField>
    <fullName>LOCAL_BANK_NAME_2__c</fullName>
    <defaultValue>$Setup.Site_Custom_Settings__c.Local_Bank_Name_2__c</defaultValue>
    <label>LOCAL BANK NAME 2</label>
    <type>TextArea</type>
</CustomField>