force-app/main/default/objects/VAT_INVOICE__c/fields/Number_of_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoicing__c</fullName>
    <label>Number of Invoicing</label>
    <summaryForeignKey>INVOICING_VAT__c.VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>