force-app/main/default/objects/VAT_INVOICE__c/fields/OutboundINVDebitNumber__c.field-meta.xml
<CustomField>
    <fullName>OutboundINVDebitNumber__c</fullName>
    <formula>IF(ISBLANK( OutboundINVNumber__c ), RED_INVOICE_NO__c , OutboundINVNumber__c )</formula>
    <label>Outbound INV/Debit Number</label>
    <type>Text</type>
</CustomField>