force-app/main/default/objects/VAT_INVOICE__c/fields/OutboundINVNumber__c.field-meta.xml
<CustomField>
    <fullName>OutboundINVNumber__c</fullName>
    <label>Outbound INV Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>