force-app/main/default/objects/VAT_INVOICE__c/fields/RECEIVABLE_RECEIPTANCE_CONFIRMED__c.field-meta.xml
<CustomField>
    <fullName>RECEIVABLE_RECEIPTANCE_CONFIRMED__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check in when the Receivables are collected for this VAT Invoice.</inlineHelpText>
    <label>RECEIVABLE RECEIPTANCE CONFIRMED</label>
    <type>Checkbox</type>
</CustomField>