force-app/main/default/objects/VAT_INVOICE__c/fields/RED_INVOICE_NO__c.field-meta.xml
<CustomField>
    <fullName>RED_INVOICE_NO__c</fullName>
    <label>RED INVOICE NO</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>