force-app/main/default/objects/VAT_INVOICE__c/fields/RollUpAmountOfTaxPI__c.field-meta.xml
<CustomField>
    <fullName>RollUpAmountOfTaxPI__c</fullName>
    <label>ROLLUP AMOUNT OF TAX-P/I</label>
    <summarizedField>PurInvVATInv__c.AmountOfTaxPILocalForVAT__c</summarizedField>
    <summaryForeignKey>PurInvVATInv__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>