force-app/main/default/objects/VAT_INVOICE__c/fields/RollUpAmountPIInclTax__c.field-meta.xml
<CustomField>
    <fullName>RollUpAmountPIInclTax__c</fullName>
    <label>ROLLUP AMOUNT P/I INCL TAX</label>
    <summarizedField>PurInvVATInv__c.AmountPIInclTaxLocalForVAT__c</summarizedField>
    <summaryForeignKey>PurInvVATInv__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>