force-app/main/default/objects/VAT_INVOICE__c/fields/RollupFMSAmountBuyingInclTAX__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSAmountBuyingInclTAX__c</fullName>
    <label>ROLLUP FMS AMOUNT BUYING INCL TAX</label>
    <summarizedField>INVOICING_VAT__c.AmountBuyingInclTAXForVAT__c</summarizedField>
    <summaryForeignKey>INVOICING_VAT__c.VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>