force-app/main/default/objects/VAT_INVOICE__c/fields/RollupFMSAmountOfTaxBuying__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSAmountOfTaxBuying__c</fullName>
    <label>ROLLUP FMS AMOUNT OF TAX-BUYING</label>
    <summarizedField>INVOICING_VAT__c.AmountOfTaxBuyingLocalForVAT__c</summarizedField>
    <summaryForeignKey>INVOICING_VAT__c.VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>