force-app/main/default/objects/VAT_INVOICE__c/fields/RollupFMSAmountSellingInclTAX__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSAmountSellingInclTAX__c</fullName>
    <label>ROLLUP FMS AMOUNT SELLING INCL TAX</label>
    <summarizedField>INVOICING_VAT__c.AmountSellingInclTAXForVAT__c</summarizedField>
    <summaryForeignKey>INVOICING_VAT__c.VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>