force-app/main/default/objects/VAT_INVOICE__c/fields/RollupFMSAmountSellingInclTAXFCY__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSAmountSellingInclTAXFCY__c</fullName>
    <label>Rollup FMS Amount Selling incl Tax(FCY)</label>
    <summarizedField>INVOICING_VAT__c.AmountSellingInclTAXFCYForVAT__c</summarizedField>
    <summaryForeignKey>INVOICING_VAT__c.VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>