force-app/main/default/objects/VAT_INVOICE__c/fields/RollupFMSTotalAmountOfSelling__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSTotalAmountOfSelling__c</fullName>
    <label>ROLLUP FMS TOTAL AMOUNT OF SELLING</label>
    <summarizedField>INVOICING_VAT__c.TotalAmountOfSellingLocalForVAT__c</summarizedField>
    <summaryForeignKey>INVOICING_VAT__c.VAT_INVOICE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>