force-app/main/default/objects/VAT_INVOICE__c/fields/RollupOtherCostInclTax__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherCostInclTax__c</fullName>
    <label>ROLLUP OTHER COST INCL TAX</label>
    <summarizedField>OtherVAT__c.AmountOtherCostInclTaxVAT__c</summarizedField>
    <summaryForeignKey>OtherVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>