force-app/main/default/objects/VAT_INVOICE__c/fields/RollupOtherRevInclTax__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherRevInclTax__c</fullName>
    <label>ROLLUP OTHER REV INCL TAX</label>
    <summarizedField>OtherVAT__c.AmountOtherRevIncTaxVAT__c</summarizedField>
    <summaryForeignKey>OtherVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>