force-app/main/default/objects/VAT_INVOICE__c/fields/RollupOtherTotalCost__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherTotalCost__c</fullName>
    <label>ROLLUP OTHER TOTAL COST</label>
    <summarizedField>OtherVAT__c.TotalAmountOtherCostVAT__c</summarizedField>
    <summaryForeignKey>OtherVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>