force-app/main/default/objects/VAT_INVOICE__c/fields/RollupTotalAmountOfPI__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountOfPI__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF P/I</label>
    <summarizedField>PurInvVATInv__c.TotalAmountOfPILocalForVAT__c</summarizedField>
    <summaryForeignKey>PurInvVATInv__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>