force-app/main/default/objects/VAT_INVOICE__c/fields/RollupWMSAmountBuyingInclTAX__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSAmountBuyingInclTAX__c</fullName>
    <label>ROLLUP WMS AMOUNT BUYING INCL TAX</label>
    <summarizedField>ConnectBillingVAT__c.AmountBuyingInclTAXForVAT__c</summarizedField>
    <summaryForeignKey>ConnectBillingVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>