force-app/main/default/objects/VAT_INVOICE__c/fields/RollupWMSAmountOfTaxBuying__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSAmountOfTaxBuying__c</fullName>
    <label>ROLLUP WMS AMOUNT OF TAX-BUYING</label>
    <summarizedField>ConnectBillingVAT__c.AmountOfTaxBuyingLocalForVAT__c</summarizedField>
    <summaryForeignKey>ConnectBillingVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>