force-app/main/default/objects/VAT_INVOICE__c/fields/RollupWMSAmountSellingInclTAX__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSAmountSellingInclTAX__c</fullName>
    <label>ROLLUP WMS AMOUNT SELLING INCL TAX</label>
    <summarizedField>ConnectBillingVAT__c.AmountSellingInclTAXForVAT__c</summarizedField>
    <summaryForeignKey>ConnectBillingVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>