force-app/main/default/objects/VAT_INVOICE__c/fields/RollupWMSTotalAmountOfBuying__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSTotalAmountOfBuying__c</fullName>
    <label>ROLLUP WMS TOTAL AMOUNT OF BUYING</label>
    <summarizedField>ConnectBillingVAT__c.TotalAmountOfBuyingLocalForVAT__c</summarizedField>
    <summaryForeignKey>ConnectBillingVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>