force-app/main/default/objects/VAT_INVOICE__c/fields/RollupWMSTotalAmountOfSelling__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSTotalAmountOfSelling__c</fullName>
    <label>ROLLUP WMS TOTAL AMOUNT OF SELLING</label>
    <summarizedField>ConnectBillingVAT__c.TotalAmountOfSellingLocalForVAT__c</summarizedField>
    <summaryForeignKey>ConnectBillingVAT__c.VATInvoiceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>