force-app/main/default/objects/VAT_INVOICE__c/fields/Selling_Tax_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Selling_Tax_Ratio__c</fullName>
    <description>Hold the Selling Tax Ratio for attached INVOICING. Only INVOICING records with the same Selling Tax Ratio are allowed to attached to one VAT INVOICE</description>
    <inlineHelpText>Hold the Selling Tax Ratio for attached Invoicing. Only Invoicing records with the same Selling Tax Ratio are allowed to attached to one VAT Invoice</inlineHelpText>
    <label>Selling Tax Ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>