force-app/main/default/objects/VAT_INVOICE__c/fields/ShipmentOrderIdentification__c.field-meta.xml
<CustomField>
    <fullName>ShipmentOrderIdentification__c</fullName>
    <label>CloFMS S/O INDENTIFICATION</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderIdentification</valueSetName>
    </valueSet>
</CustomField>