force-app/main/default/objects/VAT_INVOICE__c/fields/ShipmentOrderIdentificationDetail__c.field-meta.xml
<CustomField>
    <fullName>ShipmentOrderIdentificationDetail__c</fullName>
    <label>CloFMS S/O INDENTIFICATION DETAIL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>