force-app/main/default/objects/VAT_INVOICE__c/fields/TAX_CODE__c.field-meta.xml
<CustomField>
    <fullName>TAX_CODE__c</fullName>
    <formula>VAT_INVOICE_TO__r.TAX_CODE__c</formula>
    <label>CUSTOMER TAX CODE</label>
    <type>Text</type>
</CustomField>