force-app/main/default/objects/VAT_INVOICE__c/fields/TotalAmountOfVATBuying__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfVATBuying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TOTAL AMOUNT OF VAT BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>