force-app/main/default/objects/VAT_INVOICE__c/fields/TotalAmountOfVATSelling__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfVATSelling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TOTAL AMOUNT OF VAT SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>