force-app/main/default/objects/VAT_INVOICE__c/fields/VAT_INVOICE_ISSUE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE_ISSUE_STATUS__c</fullName>
    <label>VAT INVOICE ISSUE STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft VAT Sent</fullName>
            </value>
            <value>
                <fullName>Draft VAT Received</fullName>
            </value>
            <value>
                <fullName>Draft VAT Confirmed</fullName>
            </value>
            <value>
                <fullName>Original VAT Sent</fullName>
            </value>
            <value>
                <fullName>Original VAT Received</fullName>
            </value>
            <value>
                <fullName>Original VAT Mistaken</fullName>
            </value>
            <value>
                <fullName>Original VAT Returned</fullName>
            </value>
            <value>
                <fullName>Original VAT Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>