force-app/main/default/objects/VAT_INVOICE__c/fields/VAT_INVOICE_ISSUED_BY__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE_ISSUED_BY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the PIC of Invoice Issue in Accounting Team.</inlineHelpText>
    <label>VAT INVOICE ISSUED BY</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VAT_INVOICE_ISSUEDBY</relationshipName>
    <type>Lookup</type>
</CustomField>