force-app/main/default/objects/VAT_INVOICE__c/fields/VAT_INVOICE_ISSUED_BY_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE_ISSUED_BY_EMAIL__c</fullName>
    <formula>VAT_INVOICE_ISSUED_BY__r.Email</formula>
    <label>VAT INVOICE ISSUED BY-EMAIL</label>
    <type>Text</type>
</CustomField>