force-app/main/default/objects/VAT_INVOICE__c/fields/VAT_INVOICE_REMARKS__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE_REMARKS__c</fullName>
    <label>REMARKS ON VAT INVOICE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>