force-app/main/default/objects/VAT_INVOICE__c/fields/VAT_INVOICE_USAGE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE_USAGE_STATUS__c</fullName>
    <inlineHelpText>Choose the status of pre-printed VAT Invoice issue.</inlineHelpText>
    <label>VAT INVOICE USAGE STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAT INVOICE USED</fullName>
            </value>
            <value>
                <fullName>VAT INVOICE DISPOSED</fullName>
            </value>
            <value>
                <fullName>VAT INVOICE STORED AS BACKUP</fullName>
            </value>
            <value>
                <fullName>ISSUING VAT INVOICE ON PROGRESS</fullName>
                <isActive>false</isActive>
                <label>ISSUING VAT INVOICE ON PROGRESS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>