force-app/main/default/objects/VAT_INVOICE__c/fields/VATInvoiceArrivedDate__c.field-meta.xml
<CustomField>
    <fullName>VATInvoiceArrivedDate__c</fullName>
    <label>VAT Invoice Arrived Date</label>
    <type>Date</type>
</CustomField>