force-app/main/default/objects/VAT_INVOICE__c/fields/VATInvoiceNoFromVendor__c.field-meta.xml
<CustomField>
    <fullName>VATInvoiceNoFromVendor__c</fullName>
    <label>VAT INVOICE NO FROM VENDOR</label>
    <type>TextArea</type>
</CustomField>