force-app/main/default/objects/VAT_INVOICE__c/fields/VATInvoicePrintDate__c.field-meta.xml
<CustomField>
    <fullName>VATInvoicePrintDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>VAT INVOICE ISSUE DATE</label>
    <type>Date</type>
</CustomField>