force-app/main/default/objects/VAT_INVOICE__c/fields/VatIssueFrom__c.field-meta.xml
<CustomField>
    <fullName>VatIssueFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT ISSUE FROM</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VatIssueFrom</relationshipName>
    <type>Lookup</type>
</CustomField>