force-app/main/default/objects/VAT_INVOICE__c/fields/VATPeriodQuantity__c.field-meta.xml
<CustomField>
    <fullName>VATPeriodQuantity__c</fullName>
    <label>VAT PERIOD QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>