force-app/main/default/objects/VAT_INVOICE__c/fields/VATPeriodUnit__c.field-meta.xml
<CustomField>
    <fullName>VATPeriodUnit__c</fullName>
    <inlineHelpText>Only select the picklist when the VAT Invoice issued periodically.</inlineHelpText>
    <label>VAT PERIOD UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VATPeriod</valueSetName>
    </valueSet>
</CustomField>