force-app/main/default/objects/VAT_INVOICE__c/fields/WorkOrderIdentification__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderIdentification__c</fullName>
    <label>CloWMS W/O INDENTIFICATION</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderIdentification</valueSetName>
    </valueSet>
</CustomField>