force-app/main/default/objects/VAT_INVOICE__c/recordTypes/CloWMSVATInvoice.recordType-meta.xml
<RecordType>
    <fullName>CloWMSVATInvoice</fullName>
    <active>true</active>
    <description>To Issue VAT Invoice for CloWMS</description>
    <label>CloWMS VAT INVOICE</label>
</RecordType>