force-app/main/default/objects/VAT_INVOICE__c/recordTypes/FMSTMSWMSVATInvoice.recordType-meta.xml
<RecordType>
    <fullName>FMSTMSWMSVATInvoice</fullName>
    <active>true</active>
    <description>To Issue VAT Invoice for FMS/TMS and WMS together</description>
    <label>FMS/TMS+WMS VAT Invoice</label>
</RecordType>