force-app/main/default/objects/VAT_INVOICE__c/recordTypes/IBInvoiceNote.recordType-meta.xml
<RecordType>
    <fullName>IBInvoiceNote</fullName>
    <active>true</active>
    <description>To manage Credit Note without VAT from vendor or oversea partners/agent.</description>
    <label>Inbound Invoice(Cr) Note</label>
</RecordType>