force-app/main/default/objects/VAT_INVOICE__c/recordTypes/OBInvoiceNote.recordType-meta.xml
<RecordType>
    <fullName>OBInvoiceNote</fullName>
    <active>true</active>
    <description>To Issue Debit Note without VAT to customer or oversea partner/agent.</description>
    <label>Outbound Invoice(Dr) Note</label>
</RecordType>