force-app/main/default/objects/VAT_INVOICE__c/recordTypes/SINGLE_SHIPMENT_TO_1_VAT_INVOICE_SUMMARY.recordType-meta.xml
<RecordType>
    <fullName>SINGLE_SHIPMENT_TO_1_VAT_INVOICE_SUMMARY</fullName>
    <active>false</active>
    <description>Choose this record type when the VAT INVOICE involve with 1 shipment with Summary.</description>
    <label>SINGLE SHIPMENT TO 1 VAT INVOICE-SUMMARY</label>
</RecordType>