force-app/main/default/objects/VAT_INVOICE__c/recordTypes/SINGLE_SHIPMENT_TO_1VAT_INVOICE_INVOICING_LEVEL.recordType-meta.xml
<RecordType>
    <fullName>SINGLE_SHIPMENT_TO_1VAT_INVOICE_INVOICING_LEVEL</fullName>
    <active>false</active>
    <description>Choose this record type when the VAT INVOICE involve with 1 shipment with Invoice Line Detail.</description>
    <label>SINGLE SHIPMENT TO 1 VAT INVOICE-INVOICING LEVEL</label>
</RecordType>