force-app/main/default/objects/VAT_INVOICE__c/recordTypes/VendorVATInvoice.recordType-meta.xml
<RecordType>
    <fullName>VendorVATInvoice</fullName>
    <active>true</active>
    <description>To manage VAT from Vendors</description>
    <label>Vendor VAT Invoice</label>
</RecordType>