force-app/main/default/objects/VAT_INVOICE__c/listViews/AllVAT.listView-meta.xml
<ListView>
    <fullName>AllVAT</fullName>
    <columns>NAME</columns>
    <columns>RED_INVOICE_NO__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>VAT_INVOICE_TO__c</columns>
    <columns>VATInvoicePrintDate__c</columns>
    <columns>VAT_INVOICE_ISSUE_STATUS__c</columns>
    <columns>VAT_INVOICE_USAGE_STATUS__c</columns>
    <columns>AmountOfTaxVATBuying__c</columns>
    <columns>AmountOfTaxVATSelling__c</columns>
    <columns>VAT_INVOICE_REMARKS__c</columns>
    <columns>CLIENTS_NAME_IN_VAT_INVOICE__c</columns>
    <columns>VAT_INVOICE_ISSUED_BY__c</columns>
    <columns>DESCRIPTION_FOR_COMBINE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>